--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "fast-graphql"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "FastAPI GraphQL CRUD Note App"
+authors = ["Me"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
